--- a/NutriThink/NutriThink/NutriThink/Views/MainPage.xaml
+++ b/NutriThink/NutriThink/NutriThink/Views/MainPage.xaml
@@ -19,7 +19,7 @@
                 </OnPlatform>
             </NavigationPage.Icon>
             <x:Arguments>
-                <views:ItemsPage />
+                <views:LandingPage />
             </x:Arguments>
         </NavigationPage>
     </MasterDetailPage.Detail>
