--- a/NutriThink/NutriThink/NutriThink/App.xaml
+++ b/NutriThink/NutriThink/NutriThink/App.xaml
@@ -7,6 +7,7 @@
              x:Class="NutriThink.App">
 
     <Application.Resources>
+        <StyleSheet Source="Assets/css/NutriThink.css" />
         <ResourceDictionary>
             <!--Global Styles-->
             <Color x:Key="NavigationPrimary">#2196F3</Color>
