--- a/NutriThink/NutriThink/NutriThink/Views/LandingPage.xaml
+++ b/NutriThink/NutriThink/NutriThink/Views/LandingPage.xaml
@@ -5,7 +5,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              x:Class="NutriThink.Views.LandingPage"
-             Title="NutriThink Start">
+             Title="NutriThink Start"
+             NavigationPage.HasNavigationBar="False">
     
     <ContentPage.Content>
         <StackLayout>
